# frontend/openapi/openapi.json
@@ -1346,6 +1346,18 @@
       "ResultadoRevisionUpdate": {
         "additionalProperties": false,
         "properties": {
+          "expected_updated_at": {
+            "anyOf": [
+              {
+                "format": "date-time",
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Expected Updated At"
+          },
           "observacion": {
             "anyOf": [
               {
@@ -1369,6 +1381,9 @@
             "title": "Requiere Revision"
           }
         },
+        "required": [
+          "expected_updated_at"
+        ],
         "title": "ResultadoRevisionUpdate",
         "type": "object"
       },
